--- a/app/src/main/res/layout/activity_activate_screen.xml
+++ b/app/src/main/res/layout/activity_activate_screen.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/background"
-    tools:context=".ActivateScreen">
+    tools:context=".screen.ActivateScreen">
 
     <ImageView
         android:id="@+id/ivLogo"
