--- a/app/src/main/res/menu/activity_login_drawer.xml
+++ b/app/src/main/res/menu/activity_login_drawer.xml
@@ -6,7 +6,7 @@
             android:id="@+id/nav_offline_sync"
             android:icon="@drawable/sync_contacts"
             android:title="Offline Data Status"
-            android:visible="false" />
+            android:visible="true" />
 
         <item
             android:id="@+id/nav_setting"
