--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -254,7 +254,7 @@
                         <TextView
                             android:id="@+id/tv_connection_status"
                             android:layout_width="150dp"
-                            android:layout_height="40dp"
+                            android:layout_height="wrap_content"
                             android:layout_alignParentRight="true"
                             android:layout_margin="5dp"
                             android:layout_weight="0"
