--- a/app/src/main/res/layout/installation_or_trial_dilog.xml
+++ b/app/src/main/res/layout/installation_or_trial_dilog.xml
@@ -46,6 +46,7 @@
                 android:layout_width="0dip"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:checked="true"
                 android:text="    Installation"
                 android:textColor="@color/white"
                 android:textSize="25sp" />
