--- a/app/src/main/res/layout/row_visit_dates_layout.xml
+++ b/app/src/main/res/layout/row_visit_dates_layout.xml
@@ -9,10 +9,10 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_margin="@dimen/pad10"
-        android:background="@drawable/rectangle"
         android:gravity="center"
         android:padding="@dimen/pad10"
         android:textColor="@color/white"
-        android:textColorHint="@color/white" />
+        android:textColorHint="@color/white"
+        android:textSize="25sp" />
 
 </LinearLayout>
